[bdist_wheel]
universal = 1

[metadata]
name = vesty
license_file = LICENSE
description_file = README.md

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html
all_files = 1

[upload_doc]
upload-dir = docs/_build/html
all_files = 1

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True

[coverage:run]
branch = True
omit =
    */__*.py
    tests/*
    vesty/cli/click/*
    vesty/cli/completion/*
source =
    vesty

[coverage:html]
directory = docs/_build/html/

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    def __dir__
    if __name__ == .__main__.:

[tool:pytest]
timeout = 300
testpaths = tests
addopts =
    # ----- Reporting -----
    # Reduce spam
    -p no:logging
    # ----- Coverage -----
    # Append coverage to existing coverage data
    # --cov-append
    # Display missing lines on coverage report output
    --cov-report=term-missing
    # Package path(s) to cover
    --cov=vesty
    # Fail coverage test if coverage is below % value
    # 100% should be required if you have production critical
    # 80% should be enough to cover most cases
    # 40% is enough for beta
    # 25% is enough for a working prototype
    --cov-fail-under=80
    # ----- Style -----
    # Check for correctly sorted imports
    --isort
    # Run flake8 on code
    --flake8
norecursedirs = .git build dist* *.egg-info provision
looponfailroots = vesty tests

[flake8]
jobs = 8
hang_closing = True
ignore =
    E201,
    E231,
    E501,
    F812,
exclude =
    setup.py,
    __pycache__,
    .git,
    build,
    dist,
    docs,
    tests,


[isort]
line_length = 140
indent = '    '
multi_line_output = 3
length_sort = False
combine_star = True
not_skip = __init__.py
known_first_party = vesty
