[metadata]
name = cdr-rest


[mypy]
python_version = 3.7
ignore_missing_imports = True


[coverage:run]
branch = True
omit =
    setup.py
    */__*.py
    vsh/cli/click/*
    vsh/cli/completion/*
    tests/*
    **/tests/*
source =
    vsh

[coverage:html]
directory = docs/_build/html/

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    def __dir__
    if __name__ == __main__.:
